--- a/package.json
+++ b/package.json
@@ -9,5 +9,9 @@
     "@types/snowpack-env": "^2.3.3",
     "snowpack": "^3.3.7",
     "typescript": "^4.2.4"
+  },
+  "dependencies": {
+    "events": "^3.3.0",
+    "gl-matrix": "^3.4.3"
   }
 }
