--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,14 +8,13 @@
         "baseUrl": "./",
         /* paths - import rewriting/resolving */
         "paths": {
-            "@Engine/*": ["./src/Engine/*"]
+            "@titan/*": ["./src/titan/*"]
             // If you configured any Snowpack aliases, add them here.
             // Add this line to get types for streaming imports (packageOptions.source="remote"):
             //     "*": [".snowpack/types/*"]
             // More info: https://www.snowpack.dev/guides/streaming-imports
         },
         "allowSyntheticDefaultImports": true,
-        "importsNotUsedAsValues": "error",
         /* more strict checking for errors that per-file transpilers like `esbuild` would crash */
         "isolatedModules": true,
         /* noEmit - We only use TypeScript for type checking. */
@@ -23,6 +22,7 @@
         /* Additional Options */
         "strict": true,
         "skipLibCheck": true,
+        "sourceMap": true,
         "forceConsistentCasingInFileNames": true,
         "resolveJsonModule": true,
         "useDefineForClassFields": true
