another big update

--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   },
   "dependencies": {
     "events": "^3.3.0",
-    "gl-matrix": "^3.4.3"
+    "gl-matrix": "^3.4.3",
+    "gson": "^0.1.5",
+    "util": "^0.12.5"
   }
 }
