--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,30 +1,30 @@
 {
-    "include": ["src", "types"],
     "compilerOptions": {
-        "module": "esnext",
-        "target": "esnext",
-        "moduleResolution": "node",
-        "jsx": "preserve",
-        "baseUrl": "./",
-        /* paths - import rewriting/resolving */
-        "paths": {
-            "@titan/*": ["./src/titan/*"]
-            // If you configured any Snowpack aliases, add them here.
-            // Add this line to get types for streaming imports (packageOptions.source="remote"):
-            //     "*": [".snowpack/types/*"]
-            // More info: https://www.snowpack.dev/guides/streaming-imports
+        "target": "es6",
+        "lib": [
+            "dom", "dom.iterable", "esnext"
+        ],
+        "ts-node": {
+            "require": ["tsconfig-paths/register"]
         },
-        "allowSyntheticDefaultImports": true,
-        /* more strict checking for errors that per-file transpilers like `esbuild` would crash */
-        "isolatedModules": true,
-        /* noEmit - We only use TypeScript for type checking. */
-        "noEmit": true,
-        /* Additional Options */
-        "strict": true,
+        "allowJs": true,
         "skipLibCheck": true,
-        "sourceMap": true,
+        "esModuleInterop": true,
+        "allowSyntheticDefaultImports": true,
+        "allowUnusedLabels": true,
+        "strict": true,
         "forceConsistentCasingInFileNames": true,
+        "noFallthroughCasesInSwitch": true,
+        "module": "esnext",
+        "moduleResolution": "node",
         "resolveJsonModule": true,
-        "useDefineForClassFields": true
-    }
+        "isolatedModules": true,
+        "noEmit": true,
+        "jsx": "react-jsx",
+        "baseUrl": "src",
+        "paths": {
+            "@/*": ["./src/*"]
+        }
+    },
+    "include": ["src"]
 }
